--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -38,60 +38,60 @@
         <main class="gallery">
             <h2 class="gallerytitle">Weather Gallery</h2>
             <div class="container">
-            <figure class="imgloader">
+            <picture class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium1.jpg">
                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge1.jpg" alt="weather1" style="width:auto;">
-            </figure>
+            </picture>
             <figcaption>Snowy Lake</figcaption>
-            <figure class="imgloader">
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall2.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium2.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather2" style="width:auto;">
-            </figure>
+            </picture>
             <figcaption>Sunny Green Landscape</figcaption>
-            <figure class="imgloader">
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall3.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium3.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge3.jpg" alt="weather3" style="width:auto;">
-            </figure>
-            <figcaption>Lightning Strike</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Lightning Strike</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall4.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium4.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge4.jpg" alt="weather4" style="width:auto;">
-            </figure>
-            <figcaption>Storm Cloud</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Storm Cloud</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall5.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium5.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge5.jpg" alt="weather5" style="width:auto;">
-            </figure>
-            <figcaption>Dark Night Lightning Strike</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Dark Night Lightning Strike</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall6.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium6.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge6.jpg" alt="weather6" style="width:auto;">
-            </figure>
-            <figcaption>Beautiful Sunny Morning</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Beautiful Sunny Morning</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall7.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium7.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge7.jpg" alt="weather7" style="width:auto;">
-            </figure>
-            <figcaption>Sunny</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Sunny</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall8.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium8.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge8.jpg" alt="weather8" style="width:auto;">
-            </figure>
-            <figcaption>Bright Lightning Strike</figcaption>
-            <figure class="imgloader">
+            </picture>
+            <p>Bright Lightning Strike</p>
+            <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall9.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium9.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge9.jpg" alt="weather9" style="width:auto;">
-            </figure>
-            <figcaption>Snowy Mountains</figcaption>
+            </picture>
+            <p>Snowy Mountains</p>
         </div>
         </main>
         <footer>
