--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -35,21 +35,23 @@
                     <li class="active"><a href="#">Gallery</a></li>
                 </ul>
             </nav>
-        <main class="gallery">
+        <main>
             <h2 class="gallerytitle">Weather Gallery</h2>
+
             <div class="container">
+                <div class="imgdiv">
             <picture class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium1.jpg">
                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge1.jpg" alt="weather1" style="width:auto;">
             </picture>
-            <figcaption>Snowy Lake</figcaption>
+            <p>Snowy Lake</p>
             <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall2.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium2.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather2" style="width:auto;">
             </picture>
-            <figcaption>Sunny Green Landscape</figcaption>
+            <p>Sunny Green Landscape</p>
             <picture class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall3.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium3.jpg">
