--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -77,7 +77,7 @@
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall6.jpg">
                 <source media="(max-width: 750px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium6.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge6.jpg" alt="weather6" style="width:auto;">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge6.jpg" alt="weather6">
                  <figcaption>Beautiful Sunny Morning</figcaption>
             </figure>
         
