--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Gallery</title>
+        <title>Table Build</title>
         <meta name="description" content="Table Build Assignment">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="tablebuild.css">
