--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td>Black Friday</td>
-                <td></td>
+                <td colspan="2">$3,200</td>
             </tr>
         </table>
     </body>
