--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -12,7 +12,7 @@
     <body>
         <table>
             <tr>
-                <td>ACME Wildwest</td>
+                <td class="tableheader">ACME Wildwest</td>
             </tr>
             <tr>
                 <td>Period</td>
@@ -42,6 +42,14 @@
             <tr>
                 <td>Black Friday</td>
                 <td colspan="2">$3,200</td>
+            </tr>
+            <tr>
+                <td>December</td>
+                <td>$6,820</td>
+                <td>$7,500</td>
+            </tr>
+            <tr>
+                <td class="tablefooter">Compiled 12.20.2020 by bRauls</td>
             </tr>
         </table>
     </body>
