--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -14,7 +14,7 @@
             <tr>
                 <td class="tableheader">ACME Wildwest</td>
             </tr>
-            <tr>
+            <tr class="rowone">
                 <td>Period</td>
                 <td>Sales</td>
                 <td>Sales Goal</td>
