--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -10,7 +10,7 @@
     </head>
     
     <body>
-        <table>
+        <table class="center">
             <tr>
                 <td class="tableheader">ACME Wildwest</td>
             </tr>
