--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -14,10 +14,10 @@
             <tr>
                 <td class="tableheader">ACME Wildwest</td>
             </tr>
-            <tr class="rowone">
-                <td>Period</td>
-                <td>Sales</td>
-                <td>Sales Goal</td>
+            <tr>
+                <td class="rowone">Period</td>
+                <td class="rowone">Sales</td>
+                <td class="rowone">Sales Goal</td>
             </tr>
             <tr>
                 <td>August</td>
