--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -11,9 +11,11 @@
     
     <body>
         <table class="center">
+            <thead>
             <tr>
                 <td class="tableheader">ACME Wildwest</td>
             </tr>
+            </thead>
             <tr>
                 <td class="rowone">Period</td>
                 <td class="rowone">Sales</td>
