--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -21,6 +21,7 @@
                 <td class="rowone">Sales</td>
                 <td class="rowone">Sales Goal</td>
             </tr>
+            <tbody>
             <tr>
                 <td>August</td>
                 <td>$3,590</td>
@@ -50,8 +51,11 @@
                 <td>$6,820</td>
                 <td>$7,500</td>
             </tr>
+            </tbody>
+            <tfoot>
             <tr>
                 <td class="tablefooter">Compiled 12.20.2020 by bRauls</td>
             </tr>
+            </tfoot>
         </table>
     </body>
