--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -13,7 +13,7 @@
         <table class="center">
             <thead>
             <tr>
-                <td class="tableheader">ACME Wildwest</td>
+                <td>ACME Wildwest</td>
             </tr>
             </thead>
             <tbody>
@@ -54,7 +54,7 @@
             </tbody>
             <tfoot>
             <tr>
-                <td class="tablefooter">Compiled 12.20.2020 by bRauls</td>
+                <td>Compiled 12.20.2020 by bRauls</td>
             </tr>
             </tfoot>
         </table>
