--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -12,9 +12,7 @@
     <body>
         <table class="center">
             <thead>
-            <tr>
-                <td>ACME Wildwest</td>
-            </tr>
+            <tr>ACME Wildwest</tr>
             </thead>
             <tbody>
             <tr>
@@ -53,9 +51,7 @@
             </tr>
             </tbody>
             <tfoot>
-            <tr>
-                <td>Compiled 12.20.2020 by bRauls</td>
-            </tr>
+            <tr>Compiled 12.20.2020 by bRauls</tr>
             </tfoot>
         </table>
     </body>
