--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -12,7 +12,9 @@
     <body>
         <table class="center">
             <thead>
-            <tr>ACME Wildwest</tr>
+            <tr>
+                <td colspan="3">ACME Wildwest</td>
+            </tr>
             </thead>
             <tbody>
             <tr>
@@ -51,7 +53,9 @@
             </tr>
             </tbody>
             <tfoot>
-            <tr>Compiled 12.20.2020 by bRauls</tr>
+            <tr>
+                <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+            </tr>
             </tfoot>
         </table>
     </body>
