--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -13,14 +13,14 @@
         <table class="center">
             <thead>
             <tr>
-                <td colspan="3">ACME Wildwest</td>
+                <td colspan="3"><b>ACME Wildwest</b></td>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td class="rowone">Period</td>
-                <td class="rowone">Sales</td>
-                <td class="rowone">Sales Goal</td>
+                <td class="rowone"><b>Period</b></td>
+                <td class="rowone"><b>Sales</b></td>
+                <td class="rowone"><b>Sales Goal</b></td>
             </tr>
             <tr>
                 <td>August</td>
