--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -18,9 +18,9 @@
             </thead>
             <tbody>
             <tr>
-                <td class="rowone"><b>Period</b></td>
-                <td class="rowone"><b>Sales</b></td>
-                <td class="rowone"><b> Sales Goal </b></td>
+                <th class="rowone"><b>Period</b></th>
+                <th class="rowone"><b>Sales</b></th>
+                <th class="rowone"><b> Sales Goal </b></th>
             </tr>
             <tr>
                 <td>August</td>
@@ -43,7 +43,7 @@
                 <td class="novthree">$7,500</td>
             </tr>
             <tr>
-                <td>Black Friday</td>
+                <td><em>Black Friday</em></td>
                 <td colspan="2">$3,200</td>
             </tr>
             <tr>
