--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -13,7 +13,7 @@
         <table class="center">
             <thead>
             <tr>
-                <td colspan="3"><b>ACME Wildwest</b></td>
+                <th colspan="3"><b>ACME Wildwest</b></th>
             </tr>
             </thead>
             <tbody>
