--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -48,7 +48,7 @@
         <fieldset>
             <legend>Storm Type</legend>
             <div>Storm</div>
-            <label class="sbs">Storm Date 
+            <label class="sbs">Storm Type 
                 <select name="stormtype">
                     <option value="">Please Select &#9662;</option>
                     <option value="flashflood">Flash Flood</option>
@@ -58,11 +58,8 @@
                     <option value="tornado">Tornado</option>
                 </select>
 
-            <div>Software Needed</div>
-            <label><input type="checkbox" name="editing" value="yes"> Photo Editing</label>
-            <label><input type="checkbox" name="code" value="yes"> Coding</label>
-            <label><input type="checkbox" name="process" value="yes"> Preprocessor</label>
-            <label><input type="checkbox" name="client" value="yes"> FTP Client</label>
+            <div>Storm Date</div>
+            <label><input type="date" name="stormdate"></label>
         </fieldset>
 
         <fieldset>
