--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -59,6 +59,9 @@
 
             <div>Storm Date</div>
             <label><input type="date" name="stormdate"></label>
+
+            <div>Storm Severity</div>
+            <label><input type="range"></label>
         </fieldset>
 
         <fieldset>
