--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -80,7 +80,7 @@
             <label class="top">How Many Authors <input type="number" name="authors"></label>
         </fieldset>
 
-        <input type="submit" value="Propose My Course" class="submitBtn">
+        <input type="submit" value="Report Storm" class="submitBtn">
 
     </form>
         </main>
