--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -61,7 +61,8 @@
             <label><input type="date" name="stormdate"></label>
 
             <div>Storm Severity</div>
-            <label><input type="range" id="points" name="points" min="1" max="10"></label>
+            <label>Storm Severity</label>
+            <input type="range" id="points" name="points" min="1" max="10">
         </fieldset>
 
         <fieldset>
