--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -90,4 +90,5 @@
         <script src="js/file.js"></script>
         <script src="js/getcurrentdate.js"></script>
     </body>
+    <script src="js/stormcenter.js"></script>
 </html>
