--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -61,7 +61,24 @@
             <label><input type="date" name="stormdate"></label>
 
             <div>Storm Severity</div>
-             <label>Severity<input type="range" id="points" name="points" min="1" max="10"></label>
+            <label class="flexly" for="rating">Rating: &nbsp;&nbsp;&nbsp;
+				<input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+				<span id="ratingvalue">5</span>
+			</label>
+
+			<datalist id="tickmarks">
+				<option value="1">
+				<option value="2">
+				<option value="3">
+				<option value="4">
+				<option value="5">
+				<option value="6">
+				<option value="7">
+				<option value="8">
+				<option value="9">
+				<option value="10">
+			</datalist>
+
             
         </fieldset>
 
