--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -82,11 +82,14 @@
             <div>Storm Region</div>
             <label class="sbs">Region
                 <select name="stormregion">
-                    <option value="">Select Region</option>
+                    <option value="">Select Region &#9662;</option>
                     <option value="preston">Preston</option>
                     <option value="sodasprings">Soda Springs</option>
                     <option value="fishhaven">Fish Haven</option>
                 </select>
+
+            <div>Are you in danger?</div>
+            <label></label>
             </label>
 
             
