--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -49,7 +49,7 @@
             <legend>Storm Type</legend>
             <label class="sbs">Storm Type 
                 <select name="stormtype">
-                    <option value="">Please Select &#9662;</option>
+                    <option value="">Please Select</option>
                     <option value="flashflood">Flash Flood</option>
                     <option value="hail">Hail</option>
                     <option value="hurricane">Hurricane</option>
@@ -82,7 +82,7 @@
             <div>Storm Region</div>
             <label class="sbs">Region
                 <select name="stormregion">
-                    <option value="">Select Region &#9662;</option>
+                    <option value="">Select Region</option>
                     <option value="preston">Preston</option>
                     <option value="sodasprings">Soda Springs</option>
                     <option value="fishhaven">Fish Haven</option>
