--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -89,9 +89,9 @@
                 </select>
 
             <div>Are you in danger?</div>
-            <label><input type="radio" id="yes">Yes</label>
-            <label><input type="radio" id="maybe">Maybe</label>
-            <label><input type="radio" id="no">No</label>
+            <label class="sbs"><input type="radio" id="yes">Yes</label>
+            <label class="sbs"><input type="radio" id="maybe">Maybe</label>
+            <label class="sbs"><input type="radio" id="no">No</label>
             </label>
 
             
