--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -92,13 +92,10 @@
             <label class="sbs"><input type="radio" name="danger" value="yes">Yes</label>
             <label class="sbs"><input type="radio" name="danger" value="maybe">Maybe</label>
             <label class="sbs"><input type="radio" name="danger" value="no">No</label>
-            </label>
-
-            
         </fieldset>
 
         <fieldset>
-            <legend>Funding</legend>
+            <legend>Additional Information/Comments</legend>
             <label class="top">Anticipated Completion Date <input type="date" name="completedDate"></label>
             <label class="top">Course Subject
                 <select name="subject">
