--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -96,18 +96,7 @@
 
         <fieldset>
             <legend>Additional Information/Comments</legend>
-            <label class="top">Anticipated Completion Date <input type="date" name="completedDate"></label>
-            <label class="top">Course Subject
-                <select name="subject">
-                    <option value="">Please Select &#9662;</option>
-                    <option value="software">Software Development</option>
-                    <option value="creative">Creative Professional</option>
-                    <option value="info">Information Technology</option>
-                    <option value="data">Data Professional</option>
-                </select>
-            </label>
-
-            <label class="top">How Many Authors <input type="number" name="authors"></label>
+            <label><textarea id="infocomments" name="infocomments" rows="5" cols="50"></textarea></label>
         </fieldset>
 
         <input type="submit" value="Report Storm" class="submitBtn">
