--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -56,6 +56,7 @@
                     <option value="thunderstorm">Thunderstorm</option>
                     <option value="tornado">Tornado</option>
                 </select>
+                </label>
 
             <div>Storm Date</div>
             <label><input type="date" name="stormdate"></label>
@@ -87,6 +88,7 @@
                     <option value="sodasprings">Soda Springs</option>
                     <option value="fishhaven">Fish Haven</option>
                 </select>
+                </label>
 
             <div>Are you in danger?</div>
             <label class="sbs"><input type="radio" name="danger" value="yes">Yes</label>
