--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -81,7 +81,7 @@
 			</datalist>
             
             <div>Storm Region</div>
-            <label class="sbs">Region
+            <label class="sbs">
                 <select name="stormregion">
                     <option value="">Select Region</option>
                     <option value="preston">Preston</option>
