--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -59,7 +59,7 @@
                 </label>
 
             <div>Storm Date</div>
-            <label><input type="date" name="stormdate"></label>
+            <label class="sbs"><input type="date" name="stormdate"></label>
 
             <div>Storm Severity</div>
             <label class="sbs" for="rating">Rating: &nbsp;&nbsp;&nbsp;
