--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -58,8 +58,7 @@
                 </select>
                 </label>
 
-            <div>Storm Date</div>
-            <label class="sbs"><input type="date" name="stormdate">Storm Date</label>
+            <label class="sbs">Storm Date<input type="date" name="stormdate"></label>
 
             <div>Storm Severity</div>
             <label class="sbs" for="rating">Rating: &nbsp;&nbsp;&nbsp;
