--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -100,7 +100,7 @@
             <label><textarea id="infocomments" name="infocomments" rows="5" cols="50"></textarea></label>
         </fieldset>
 
-        <input type="submit" value="Report Storm" class="submitBtn">
+        <input type="submit" value="Report Storm" class="submitBtn" href="">
 
     </form>
         </main>
