--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -47,7 +47,7 @@
     
 <!-- CONTENT HERE -->
 <main>
-    <h1>Storm Repor</h1>
+    <h1>Storm Report</h1>
         <p>Thank you for submitting your Storm Report. Someone will be in contact with you as soon as possible.</p>
     </main>
     
