--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -60,8 +60,7 @@
 
             <label class="sbs">Storm Date<input type="date" name="stormdate"></label>
 
-            <div>Storm Severity</div>
-            <label class="sbs" for="rating">Rating: &nbsp;&nbsp;&nbsp;
+            <label class="sbs" for="rating">Storm Severity Rating &nbsp;&nbsp;&nbsp;
 				<input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
 				<span id="ratingvalue">5</span>
 			</label>
