--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -78,8 +78,8 @@
 				<option value="10">
 			</datalist>
             
-            <div>Storm Region</div>
-            <label class="sbs">
+            
+            <label class="sbs">Storm Region
                 <select name="stormregion">
                     <option value="">Select Region</option>
                     <option value="preston">Preston</option>
