--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -59,8 +59,9 @@
                 </label>
 
             <label class="sbs">Storm Date<input type="date" name="stormdate"></label>
-
-            <label class="sbs" for="rating">Storm Severity Rating &nbsp;&nbsp;&nbsp;
+            
+            <div>Storm Severity Rating</div>
+            <label class="sbs" for="rating">&nbsp;&nbsp;&nbsp;
 				<input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
 				<span id="ratingvalue">5</span>
 			</label>
