--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -58,7 +58,8 @@
                 </select>
                 </label>
 
-            <label class="sbs">Storm Date<input type="date" name="stormdate"></label>
+            <div>Storm Date</div>
+            <label class="sbs"><input type="date" name="stormdate"></label>
             
             <div>Storm Severity Rating</div>
             <label class="sbs" for="rating">&nbsp;&nbsp;&nbsp;
