--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -47,7 +47,8 @@
 
         <fieldset>
             <legend>Storm Type</legend>
-            <label class="sbs">Storm Type 
+            <div>Storm Type</div>
+            <label class="sbs"> 
                 <select name="stormtype">
                     <option value="">Please Select</option>
                     <option value="flashflood">Flash Flood</option>
