--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -26,11 +26,11 @@
                 <button onclick="toggleMenu()">&#9776; Menu</button>
                 <ul id="mainNav" class="hide">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Preston</a></li>
+                    <li><a href="https://sommerl.github.io/lesson5/preston-5.html#">Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li class="active"><a href="#">Storm Center</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
                 </ul>
             </nav>
         <main>
