--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -107,6 +107,9 @@
     </form>
         </main>
         <footer>
+        </div>
+        &#169; Right On Weather | Attributions | Laura Sommer
+        <div id="updated">
         </footer>
         <script src="js/stormcenter.js"></script>
     </body>
