--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -42,7 +42,7 @@
             <label class="top">Last Name* <input type="text" name="lname" required></label>
             <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
             <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
-            <label class="top">Zip Code* <input type="number" name="number" placeholder="11111"></label>
+            <label class="top">Zip Code* <input type="number" name="number" placeholder="11111" required></label>
         </fieldset>
 
         <fieldset>
