--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
 <main>
-    <h1>Storm Report</h1>
+    <h1>Storm Submission Confirmation</h1>
         <p>Thank you for submitting your Storm Report. Someone will be in contact with you as soon as possible.</p>
     </main>  
     <footer>
