--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -34,7 +34,7 @@
                 </ul>
             </nav>
         <main>
-            <h1>Storm Center Report</h1>
+            <h1>Storm Report Center</h1>
     <form method="get" action="thanks.html">
         <fieldset>
             <legend>Contact Information</legend>
