--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -46,17 +46,20 @@
         </fieldset>
 
         <fieldset>
+            <label class="top" for="stype" id="types">Storm Type
+                <input name="stype" list="stormtype" id="stype">
+            
             <legend>Storm Type</legend>
             <div>Storm Type</div>
-            <label class="sbs"> 
-                <select name="stormtype">
-                    <option value="">Please Select</option>
-                    <option value="flashflood">Flash Flood</option>
-                    <option value="hail">Hail</option>
-                    <option value="hurricane">Hurricane</option>
-                    <option value="thunderstorm">Thunderstorm</option>
-                    <option value="tornado">Tornado</option>
-                </select>
+            <label class="sbs" for="type" id="type">Storm Type
+                <input name="stype" list="stormtype" id="stype"> 
+                <datalist id="stormtype">
+                    <option value="Flash Flood"></option>
+                    <option value="Hail"></option>
+                    <option value="Hurricane"></option>
+                    <option value="Thunderstorm"></option>
+                    <option value="Tornado"></option>
+                </datalist>
                 </label>
 
             <div>Storm Date</div>
