--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -58,7 +58,7 @@
                 </select>
                 </label>
 
-            <label class="sbs"><input type="date" name="stormdate">Storm Date</label>
+            <label class="sbs">Storm Date<input type="date" name="stormdate"></label>
             
             <label class="sbs" for="rating">Storm Severity Rating
 				<input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
