--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -96,7 +96,7 @@
 
         <fieldset>
             <legend>Additional Information/Comments</legend>
-            <label>Info/Comments<textarea id="infocomments" name="infocomments" rows="5" cols="50"></textarea></label>
+            <textarea id="infocomments" name="infocomments" rows="5" cols="50"></textarea>
         </fieldset>
 
         <input type="submit" value="Report Storm" class="submitBtn" href="">
