--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -18,5 +18,6 @@
         <footer>
             Laura Sommer | BYU-Idaho | WDD 230
         </footer>
+        <script src="prophets.js"></script>
     </body>
 </html>
