--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -6,7 +6,7 @@
         <title>Latter-day Prophets</title>
         <meta name="description" content="JSON of Latter-day Saint Prophets">
         <link rel="shortcut icon" href="favicon.ico">
-        <link rel="stylesheet" href="prophets.css">
+        <link rel="stylesheet" href="css/prophets.css">
     </head>
     <body>
         <header>
@@ -18,6 +18,6 @@
         <footer>
             Laura Sommer | BYU-Idaho | WDD 230
         </footer>
-        <script src="prophets.js"></script>
+        <script src="js/prophets.js"></script>
     </body>
 </html>
