--- a/lesson9/homewireframes.html
+++ b/lesson9/homewireframes.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Home Wireframes</h1>
-        <img src="https://wireframe.cc/BHO23y" alt="mediumview">
-        <img src="https://wireframe.cc/LzzOHA" alt="largeview">
-        <img src=""
+        <img href="https://wireframe.cc/BHO23y" alt="mediumview">
+        <img href="https://wireframe.cc/LzzOHA" alt="largeview">
+        <img href=""
     </body>
