--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -40,8 +40,5 @@
         <main>
             <h2 class="town">Preston, Idaho</h2>
             <div class="herodiv">
-                <picture class="banner-img">
-                    <source media="(max-width: 200px)" srcset="images/small.jpg">
-                    <source media="(max-width: 600px)" srcset="images/medium.jpg">
-                        <img src="images/large.jpg" alt="herobannerimg" class="herobannerimg">
-                </picture>
+                <img src="images/hero.jpg" alt="banner img" class="banner-image">
+            </main>
