--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -41,4 +41,5 @@
             <h2 class="town">Preston, Idaho</h2>
             <div class="herodiv">
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
+            <div class="towninfo"></div>
             </main>
