--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -39,4 +39,7 @@
             <div class="herodiv">
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <div class="towninfo"></div>
+            <footer>
+                <script src="js/index.js"></script>
+            </footer>
             </main>
