--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -40,6 +40,12 @@
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <div class="towninfo"></div>
             <footer>
-                <script src="js/index.js"></script>
+            </div>
+            &#169; Right On Weather | Attributions | Laura Sommer
+            <div id="updated">
             </footer>
+            <script src="js/index.js"></script>
+            <script src="js/file.js"></script>
             </main>
+            </body>
+            </html>
