--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -7,6 +7,9 @@
         <meta name="description" content="JSON of Latter-day Saint Prophets">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/prophets.css">
+        <link rel="stylesheet" href="css/large.css">
+        <link rel="stylesheet" href="css/medium.css">
+        <link rel="stylesheet" href="css/small.css">
     </head>
     <body>
         <header>
