--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -6,7 +6,7 @@
         <title>Table Build</title>
         <meta name="description" content="Table Build Assignment">
         <link rel="shortcut icon" href="favicon.ico">
-        <link rel="stylesheet" href="tablebuild.css">
+        <link rel="stylesheet" href="css/tablebuild.css">
     </head>
     
     <body>
