--- a/lesson9/homewireframes.html
+++ b/lesson9/homewireframes.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Home Wireframes</h1>
-        <img href="https://wireframe.cc/BHO23y" alt="mediumview">
-        <img href="https://wireframe.cc/LzzOHA" alt="largeview">
-        <img href=""
+        <img src="images/small.png" alt="smallview">
+        <img src="images/medium.png" alt="mediumview">
+        <img src="images/large.png" alt="largeview">
     </body>
