--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -32,6 +32,7 @@
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
                     <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
+                    <li><a href="https://sommerl.github.io/lesson9/homewireframes.html#">Wireframes</a></li>
                 </ul>
             </nav>
         <main>
