--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -27,6 +27,8 @@
                     <li><strong>Lesson 05: </strong> <a href="https://sommerl.github.io/lesson5/preston-5.html">Assignment Link</a></li>
                     <li><strong>Lesson 06: </strong> <a href="https://sommerl.github.io/lesson6/preston-6.html">Assignment Link</a></li>
                     <li><strong>Lesson 07: </strong> <a href="https://sommerl.github.io/lesson7/gallery-7.html#">Assignment Link</a></li>
+                    <li><strong>Lesson 08: </strong> <a href="https://sommerl.github.io/lesson8/stormcenter.html#">Assignment Link</a></li>
+                    <li><strong>Lesson 09: </strong> <a href="https://sommerl.github.io/lesson9/index.html#">Assignment Link</a></li>
                 </ul>
             </nav>
                 </div>
