--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home Page</title>
-        <meta name="description" content="My Weather Site">
-        <link rel="shortcut icon" href="favicon.ico">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small.css">
-        <link rel="stylesheet" href="css/medium.css">
-        <link rel="stylesheet" href="css/large.css">
-    </head>
-    <body>
-        <header>
-    
-            <picture>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home Page</title>
+    <meta name="description" content="My Weather Site">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+</head>
+
+<body>
+    <header>
+
+        <picture>
             <img src="images/weatherlogoresize.png" alt="weather logo">
-            </picture>
-            <section class="heading">
+        </picture>
+        <section class="heading">
             <h1>Right On Weather</h1>
             <div class="moto">Where it's always "Right On"</div>
         </section>
-        </header>
-            <nav class="clearfix">
-                <button onclick="toggleMenu()">&#9776; Menu</button>
-                
-                <ul id="mainNav" class="hide">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="https://sommerl.github.io/lesson5/preston-5.html#">Preston</a></li>
-                    <li><a href="#">Soda Springs</a></li>
-                    <li><a href="#">Fish Haven</a></li>
-                    <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
-                    <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
-                    <li><a href="https://sommerl.github.io/lesson9/homewireframes.html#">Wireframes</a></li>
-                </ul>
-            </nav>
-        <main>
-            <div class="herodiv">
-                <img src="images/hero.jpg" alt="banner img" class="banner-image">
+    </header>
+    <nav class="clearfix">
+        <button onclick="toggleMenu()">&#9776; Menu</button>
+
+        <ul id="mainNav" class="hide">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="https://sommerl.github.io/lesson5/preston-5.html#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
+            <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
+            <li><a href="https://sommerl.github.io/lesson9/homewireframes.html#">Wireframes</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1 class="home">Home</h1>
+        <div class="herodiv">
+            <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <div class="towninfo"></div>
-            </main>
-            <footer>
-            </div>
-            &#169; Right On Weather | Attributions | Laura Sommer
-            <div id="updated">
-            </footer>
-            <script src="js/index.js"></script>
-            <script src="js/file.js"></script>
-            </body>
-            </html>
+    </main>
+    <footer>
+        </div>
+        &#169; Right On Weather | Attributions | Laura Sommer
+        <div id="updated">
+    </footer>
+    <script src="js/index.js"></script>
+    <script src="js/file.js"></script>
+</body>
+
+</html>
