--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -42,6 +42,22 @@
         <div class="herodiv">
             <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <div class="towninfo"></div>
+            <div class="article">
+                <h2>The Great State of Idaho</h2>
+                <img src="images/idaho.jpg" alt="articlepic" class="articlepic">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Adipiscing
+                    commodo elit at imperdiet dui accumsan sit amet nulla. Vel turpis nunc eget lorem dolor sed viverra.
+                    In nisl nisi scelerisque eu ultrices vitae auctor. Adipiscing bibendum est ultricies integer.
+                    Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Sit amet luctus
+                    venenatis lectus magna fringilla urna. Eget egestas purus viverra accumsan. Sollicitudin tempor id
+                    eu nisl nunc mi ipsum faucibus vitae. Iaculis urna id volutpat lacus laoreet non curabitur gravida.
+                    Eget gravida cum sociis natoque penatibus et magnis dis parturient. Nisl pretium fusce id velit ut
+                    tortor pretium viverra. Viverra aliquet eget sit amet tellus cras adipiscing. Felis donec et odio
+                    pellentesque diam volutpat commodo sed. Varius duis at consectetur lorem donec massa sapien
+                    faucibus. Pellentesque massa placerat duis ultricies lacus sed turpis. Consectetur a erat nam at
+                    lectus urna.</p>
+            </div>
     </main>
     <footer>
         </div>
