--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home Page</title>
     <meta name="description" content="My Weather Site">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -17,7 +17,7 @@
     <header>
 
         <picture>
-            <img src="images/weatherlogoresize.png" alt="weather logo">
+            <img src="images/weatherlogoresize.png">
         </picture>
         <section class="heading">
             <h1>Right On Weather</h1>
@@ -40,11 +40,11 @@
     <main>
         <h1 class="home">Home</h1>
         <div class="herodiv">
-            <img src="images/hero.jpg" alt="banner img" class="banner-image">
+            <img src="images/hero.jpg" class="banner-image">
             <div class="towninfo"></div>
             <div class="article">
                 <h2>The Great State of Idaho</h2>
-                <img src="images/idaho.jpg" alt="articlepic" class="articlepic">
+                <img src="images/idaho.jpg" class="articlepic">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Adipiscing
                     commodo elit at imperdiet dui accumsan sit amet nulla. Vel turpis nunc eget lorem dolor sed viverra.
