--- a/lesson10/api-test.html
+++ b/lesson10/api-test.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Latter-day Prophets</title>
+        <title>Weather API Activity</title>
         <meta name="description" content="Weather API Activity">
         <link rel="shortcut icon" href="favicon.ico">
     </head>
