--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -27,12 +27,12 @@
             <nav class="clearfix">
                 <button onclick="toggleMenu()">&#9776; Menu</button>
                 <ul id="mainNav" class="hide">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://sommerl.github.io/lesson9/index.html#">Home</a></li>
                     <li class="active"><a href="#">Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
-                    <li><a href="#">Storm Center</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
+                    <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
                 </ul>
             </nav>
         <main>
