--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -41,7 +41,7 @@
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Currently: 63°F</p>
+                <p>Current Temperature:<span id="current-temp"></span>&deg; F</p>
                 <p>High: 64°F</p>
                 <p>Wind Chill: 59°F </p>
                 <p>Humidity: 50%</p>
@@ -119,4 +119,5 @@
                 </div>
         </footer>
         <script src="js/file.js"></script>
+        <script src="js/preston10.js"></script>
 </html>
