--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -42,7 +42,7 @@
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Current Temperature:<span id="current-temp"></span>&deg; F</p>
-                <p>High: 64°F</p>
+                <p>High:<span id="high-temp"></span>&deg; F</p>
                 <p>Wind Chill: 59°F </p>
                 <p>Humidity: 50%</p>
                 <p>Wind Speed: 9 MPH</p>
