--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -41,7 +41,8 @@
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Current: <span id="current-temp"></span>&deg; F</p>
+                <p>Current Temp: <span id="current-temp"></span>&deg; F</p>
+                <p>Current: <span id="current-condition"></span></p>
                 <p>High: <span id="high-temp"></span>&deg; F</p>
                 <p>Wind Chill: 59°F </p>
                 <p>Humidity: 50%</p>
