--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -45,7 +45,7 @@
                 <p>Current: <span id="current-condition"></span></p>
                 <p>High: <span id="high-temp"></span>&deg; F</p>
                 <p>Wind Chill: 59°F </p>
-                <p>Humidity: 50%</p>
+                <p>Humidity:<span id="humidity"></span> %</p>
                 <p>Wind Speed: 9 MPH</p>
             </section>
             </div>
