--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -46,7 +46,7 @@
                 <p>High: <span id="high-temp"></span>&deg; F</p>
                 <p>Wind Chill: 59°F </p>
                 <p>Humidity: <span id="humidity"></span>%</p>
-                <p>Wind Speed: 9 MPH</p>
+                <p>Wind Speed: <span id="wind-speed"></span> MPH</p>
             </section>
             </div>
             <div class="forecast">
