--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -44,7 +44,7 @@
                 <p>Current Temp: <span id="current-temp"></span>&deg; F</p>
                 <p>Current: <span id="current-condition"></span></p>
                 <p>High: <span id="high-temp"></span>&deg; F</p>
-                <p>Wind Chill: 59°F </p>
+                <p>Wind Chill: N/A </p>
                 <p>Humidity: <span id="humidity"></span>%</p>
                 <p>Wind Speed: <span id="wind-speed"></span> MPH</p>
             </section>
