--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -42,7 +42,7 @@
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Current Temp: <span id="current-temp"></span>&deg; F</p>
-                <p>Current: <span id="current-condition"></span></p>
+                <p>Current: <span id="current"></span></p>
                 <p>High: <span id="high-temp"></span>&deg; F</p>
                 <p>Wind Chill: N/A </p>
                 <p>Humidity: <span id="humidity"></span>%</p>
