--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -66,7 +66,7 @@
                             <td align="center" valign="center">
                                 <img src="images/sun.png" alt="sun" />
                                 <br />
-                                64°F
+                                <span id="monday"></span>&deg; F
                             </td>
                             <td align="center" valign="center">
                                 <img src="images/sun.png" alt="sun" />
